force-app/main/default/objects/MobileDevice__c/MobileDevice__c.object-meta.xml
<CustomObject>
    <description>モバイルデバイス</description>
    <label>MobileDevice</label>
    <nameField>
        <label>MobileDevice</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>