force-app/main/default/objects/MobileDevice__c/fields/InstalledDate__c.field-meta.xml
<CustomField>
    <fullName>InstalledDate__c</fullName>
    <description>モバイル端末を導入した日。日付が不明名場合は厳格でなくてもいいため、不明な場合はM月1日付けでよい</description>
    <label>導入日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>