force-app/main/default/objects/MobileDevice__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <description>モバイルデバイスのOS</description>
    <label>OS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
                <default>true</default>
                <label>Android</label>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>iPadOS</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>